--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "intl": "^1.2.5",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^1.10.3",
