lastest update to spout-mobile

--- a/ios/spoutmobile/Info.plist
+++ b/ios/spoutmobile/Info.plist
@@ -74,5 +74,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>App requesting face id usage</string>
 </dict>
 </plist>
