--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -19,15 +22,21 @@
     "formik": "^2.2.9",
     "intl": "^1.2.5",
     "lottie-react-native": "^5.1.6",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-clipboard": "^0.0.5",
+    "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-local-authentication": "^0.1.1",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
