--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-camera-roll/camera-roll": "^5.6.0",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/datetimepicker": "^7.1.0",
@@ -35,9 +36,11 @@
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-share": "^8.2.2",
     "react-native-size-matters": "^0.4.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.6.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
