--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-clipboard": "^0.0.5",
     "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^5.6.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-local-authentication": "^0.1.1",
     "react-native-modal-datetime-picker": "^15.0.1",
