--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.9",
     "intl": "^1.2.5",
     "lottie-react-native": "^5.1.6",
+    "mime": "^3.0.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
