--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
