--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "appcenter": "5.0.0",
+    "appcenter-analytics": "5.0.0",
+    "appcenter-cli": "^2.14.0",
+    "appcenter-crashes": "5.0.0",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "intl": "^1.2.5",
@@ -31,6 +35,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-clipboard": "^0.0.5",
+    "react-native-code-push": "^8.1.0",
     "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^5.6.0",
