--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spoutpay",
-  "version": "1.0.3",
+  "name": "fixiteasy",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
