--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,13 +96,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.spout.payment"
+    namespace "com.fixit.easy"
     defaultConfig {
-        applicationId "com.spout.payment"
+        applicationId "com.fixit.easy"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "1.0.3"
+        versionCode 2
+        versionName "1.0.0"
         multiDexEnabled true
     }
 
