--- a/ios/FixItEasy.xcodeproj/xcshareddata/xcschemes/FixItEasy.xcscheme
+++ b/ios/FixItEasy.xcodeproj/xcshareddata/xcschemes/FixItEasy.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SpoutPay.app"
-               BlueprintName = "SpoutPay"
-               ReferencedContainer = "container:SpoutPay.xcodeproj">
+               BuildableName = "FixItEasy.app"
+               BlueprintName = "FixItEasy"
+               ReferencedContainer = "container:FixItEasy.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SpoutPayTests.xctest"
-               BlueprintName = "SpoutPayTests"
-               ReferencedContainer = "container:SpoutPay.xcodeproj">
+               BuildableName = "FixItEasyTests.xctest"
+               BlueprintName = "FixItEasyTests"
+               ReferencedContainer = "container:FixItEasy.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SpoutPay.app"
-            BlueprintName = "SpoutPay"
-            ReferencedContainer = "container:SpoutPay.xcodeproj">
+            BuildableName = "FixItEasy.app"
+            BlueprintName = "FixItEasy"
+            ReferencedContainer = "container:FixItEasy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SpoutPay.app"
-            BlueprintName = "SpoutPay"
-            ReferencedContainer = "container:SpoutPay.xcodeproj">
+            BuildableName = "FixItEasy.app"
+            BlueprintName = "FixItEasy"
+            ReferencedContainer = "container:FixItEasy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
