--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,7 +21,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'PayScholar' do
+target 'FixItEasy' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -43,7 +43,7 @@ target 'PayScholar' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'PayScholarTests' do
+  target 'FixItEasyTests' do
     inherit! :complete
     # Pods for testing
   end
