--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,9 +96,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.fixit.easy"
+    namespace "com.pay.scholar"
     defaultConfig {
-        applicationId "com.fixit.easy"
+        applicationId "com.pay.scholar"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
