--- a/ios/PayScholar.xcodeproj/xcshareddata/xcschemes/PayScholar.xcscheme
+++ b/ios/PayScholar.xcodeproj/xcshareddata/xcschemes/PayScholar.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FixItEasy.app"
-               BlueprintName = "FixItEasy"
-               ReferencedContainer = "container:FixItEasy.xcodeproj">
+               BuildableName = "PayScholar.app"
+               BlueprintName = "PayScholar"
+               ReferencedContainer = "container:PayScholar.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "FixItEasyTests.xctest"
-               BlueprintName = "FixItEasyTests"
-               ReferencedContainer = "container:FixItEasy.xcodeproj">
+               BuildableName = "PayScholarTests.xctest"
+               BlueprintName = "PayScholarTests"
+               ReferencedContainer = "container:PayScholar.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FixItEasy.app"
-            BlueprintName = "FixItEasy"
-            ReferencedContainer = "container:FixItEasy.xcodeproj">
+            BuildableName = "PayScholar.app"
+            BlueprintName = "PayScholar"
+            ReferencedContainer = "container:PayScholar.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FixItEasy.app"
-            BlueprintName = "FixItEasy"
-            ReferencedContainer = "container:FixItEasy.xcodeproj">
+            BuildableName = "PayScholar.app"
+            BlueprintName = "PayScholar"
+            ReferencedContainer = "container:PayScholar.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
