--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ca": "cd android && ./gradlew clean && ./gradlew --stop && npm cache clean --force && cd .. && yarn start --reset-cache"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
