--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,9 +96,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.testApp"
+    namespace "com.pakam"
     defaultConfig {
-        applicationId "com.testApp"
+        applicationId "com.pakam"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 7
@@ -128,6 +128,7 @@ android {
                 keyAlias MYAPP_UPLOAD_KEY_ALIAS
                 keyPassword MYAPP_UPLOAD_KEY_PASSWORD
             }
+            storeFile file('/Users/macbook/Desktop/xd/testApp/android/app/pakam-key.keystore')
         }
     }
     buildTypes {
