--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testapp",
+  "name": "pakam",
   "version": "1.0",
   "private": true,
   "scripts": {
@@ -38,6 +38,8 @@
     "react-native-clipboard": "^0.0.5",
     "react-native-code-push": "^8.1.0",
     "react-native-device-info": "^10.6.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^5.6.0",
     "react-native-linear-gradient": "^2.6.2",
@@ -48,6 +50,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.2",
     "react-native-size-matters": "^0.4.0",
+    "react-native-spinkit": "^1.5.1",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "^3.6.0",
